--- a/Google Chrome/SGPlusV2ChromeExtension/manifest.json
+++ b/Google Chrome/SGPlusV2ChromeExtension/manifest.json
@@ -3,13 +3,10 @@
       "exclude_globs": [  ],
       "exclude_matches": [  ],
       "include_globs": [  ],
-      "js": [ "steamgifts-plus-v2-install.user.js" ],
+      "js": ["jquery-1.11.0.min.js", "steamgifts-plus-v2-install.user.js" ],
       "matches": [ "http://www.steamsocial.com/*" ],
       "run_at": "document_end"
    } ],
-   "background": {
-    "scripts": ["jquery-1.11.0.min.js"] 
-   },
    "description": "Adds various features.",
    "name": "SteamGifts Plus v2",
    "permissions": [
