--- a/Google Chrome/SGPlusV2ChromeExtension/manifest.json
+++ b/Google Chrome/SGPlusV2ChromeExtension/manifest.json
@@ -13,7 +13,7 @@
       "storage",
       "http://www.steamsocial.com/"
     ],
-   "options_page": "options.html",
+   "options_page": "settings.html",
    "version": "1.2",
    "update_url": "https://raw2.github.com/leomoty/SGV2-/dev/Google%20Chrome/updates.xml",
    "manifest_version" : 2
