Convert EndlessScroll for Giveaways

--- a/SGv2+/SGv2+.csproj
+++ b/SGv2+/SGv2+.csproj
@@ -19,6 +19,8 @@
   </PropertyGroup>
   <ItemGroup>
     <TypeScriptCompile Include="app.ts" />
+    <TypeScriptCompile Include="EndlessScrollGiveaways.ts" />
+    <TypeScriptCompile Include="EndlessScroll.ts" />
     <TypeScriptCompile Include="ScrollingSidebar.ts" />
     <TypeScriptCompile Include="GridView.ts" />
     <TypeScriptCompile Include="FixedNavbar.ts" />
