--- a/SGv2+/SGv2+.csproj
+++ b/SGv2+/SGv2+.csproj
@@ -19,7 +19,9 @@
   </PropertyGroup>
   <ItemGroup>
     <TypeScriptCompile Include="app.ts" />
+    <TypeScriptCompile Include="Scripts\pagedown\MarkdownConverter.d.ts" />
     <TypeScriptCompile Include="ScrollingSidebar.ts" />
+    <TypeScriptCompile Include="LivePreview.ts" />
     <TypeScriptCompile Include="GridView.ts" />
     <TypeScriptCompile Include="FixedNavbar.ts" />
     <TypeScriptCompile Include="ModuleDefinition.ts" />
@@ -27,6 +29,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
+    <Content Include="Scripts\pagedown\MarkdownConverter.js" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">12.0</VisualStudioVersion>
@@ -58,6 +61,8 @@
     <TypeScriptRemoveComments>True</TypeScriptRemoveComments>
     <TypeScriptSourceMap>False</TypeScriptSourceMap>
     <TypeScriptOutFile>SteamgiftsPlusV2.js</TypeScriptOutFile>
+    <TypeScriptTarget>ES5</TypeScriptTarget>
+    <TypeScriptGeneratesDeclarations>False</TypeScriptGeneratesDeclarations>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)' == 'Release'">
     <TypeScriptRemoveComments>true</TypeScriptRemoveComments>
