Support Endless Scrolling in My Giveaways

--- a/SGv2+/SGv2+.csproj
+++ b/SGv2+/SGv2+.csproj
@@ -19,6 +19,7 @@
   </PropertyGroup>
   <ItemGroup>
     <TypeScriptCompile Include="app.ts" />
+    <TypeScriptCompile Include="EndlessScrollMyGiveaways.ts" />
     <TypeScriptCompile Include="Scripts\pagedown\MarkdownConverter.d.ts" />
     <TypeScriptCompile Include="EndlessScrollGiveawayComments.ts" />
     <TypeScriptCompile Include="EndlessScrollDiscussionReplies.ts" />
