Creates Core.ts
Core.ts should contain all functionality that SGv2+ will provide to all
its modules, such can be accessed from any module scope by simply
referencing SGV2P.

--- a/SGv2+/SGv2+.csproj
+++ b/SGv2+/SGv2+.csproj
@@ -19,6 +19,8 @@
   </PropertyGroup>
   <ItemGroup>
     <TypeScriptCompile Include="app.ts" />
+    <TypeScriptCompile Include="CommentAndEnter.ts" />
+    <TypeScriptCompile Include="Core.ts" />
     <TypeScriptCompile Include="Scripts\pagedown\MarkdownConverter.d.ts" />
     <TypeScriptCompile Include="ScrollingSidebar.ts" />
     <TypeScriptCompile Include="LivePreview.ts" />
