Separate module for marking new comments

--- a/SGv2+/SGv2+.csproj
+++ b/SGv2+/SGv2+.csproj
@@ -21,7 +21,9 @@
     <TypeScriptCompile Include="app.ts" />
     <TypeScriptCompile Include="CommentAndEnter.ts" />
     <TypeScriptCompile Include="Core.ts" />
-    <TypeScriptCompile Include="EndlessScrollMyGiveaways.ts" />    <TypeScriptCompile Include="Scripts\pagedown\MarkdownConverter.d.ts" />
+    <TypeScriptCompile Include="EndlessScrollMarkComments.ts" />
+    <TypeScriptCompile Include="EndlessScrollMyGiveaways.ts" />
+    <TypeScriptCompile Include="Scripts\pagedown\MarkdownConverter.d.ts" />
     <TypeScriptCompile Include="EndlessScrollGiveawayComments.ts" />
     <TypeScriptCompile Include="EndlessScrollDiscussionReplies.ts" />
     <TypeScriptCompile Include="EndlessScrollDiscussion.ts" />
