--- a/SGv2+/SGv2+.csproj
+++ b/SGv2+/SGv2+.csproj
@@ -21,6 +21,8 @@
     <TypeScriptCompile Include="app.ts" />
     <TypeScriptCompile Include="CommentAndEnter.ts" />
     <TypeScriptCompile Include="Core.ts" />
+    <TypeScriptCompile Include="EntryCommenters.ts" />
+    <TypeScriptCompile Include="Settings.ts" />
     <TypeScriptCompile Include="Scripts\pagedown\MarkdownConverter.d.ts" />
     <TypeScriptCompile Include="ScrollingSidebar.ts" />
     <TypeScriptCompile Include="LivePreview.ts" />
