Includes the popup for settings and typings for bPopup jQuery Extension

--- a/SGv2+/SGv2+.csproj
+++ b/SGv2+/SGv2+.csproj
@@ -23,6 +23,7 @@
     <TypeScriptCompile Include="Core.ts" />
     <TypeScriptCompile Include="EntryCommenters.ts" />
     <TypeScriptCompile Include="FixedFooter.ts" />
+    <TypeScriptCompile Include="Scripts\typings\jquery\jquery_bpopup.d.ts" />
     <TypeScriptCompile Include="Settings.ts" />
     <TypeScriptCompile Include="EndlessScrollMarkComments.ts" />
     <TypeScriptCompile Include="EndlessScrollMyGiveaways.ts" />
