--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,6 @@ install:
   - "npm install -g typescript"
 script:
   - "tsc --target ES5 --removeComments --out temp.js ./SGv2+/app.ts"
+branches:
+  only:
+    - master
