Refactor LocalStorage from Settings.
It is exposed as SGPP.storage now

--- a/SGv2+/SGv2+.csproj
+++ b/SGv2+/SGv2+.csproj
@@ -20,6 +20,7 @@
   <ItemGroup>
     <TypeScriptCompile Include="app.ts" />
     <TypeScriptCompile Include="Core.ts" />
+    <TypeScriptCompile Include="LocalStorage.ts" />
     <TypeScriptCompile Include="Modules\CommentAndEnter.ts" />
     <TypeScriptCompile Include="Modules\EndlessScroll\EndlessScroll.ts" />
     <TypeScriptCompile Include="Modules\EndlessScroll\EndlessScrollDiscussion.ts" />
