--- a/SGPP/SGv2+.csproj
+++ b/SGPP/SGv2+.csproj
@@ -28,7 +28,7 @@
     <TypeScriptCompile Include="Modules\EndlessScroll\EndlessScrollGiveawayComments.ts" />
     <TypeScriptCompile Include="Modules\EndlessScroll\EndlessScrollGiveaways.ts" />
     <TypeScriptCompile Include="Modules\MarkComments.ts" />
-    <TypeScriptCompile Include="Modules\EndlessScroll\EndlessScrollMyGiveaways.ts" />
+    <TypeScriptCompile Include="Modules\EndlessScroll\EndlessScrollLists.ts" />
     <TypeScriptCompile Include="Modules\EntryCommenters.ts" />
     <TypeScriptCompile Include="Modules\FixedFooter.ts" />
     <TypeScriptCompile Include="Modules\FixedNavbar.ts" />
