--- a/SGPP/packages.config
+++ b/SGPP/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="greasemonkey.TypeScript.DefinitelyTyped" version="0.0.3" targetFramework="net45" />
   <package id="jquery.TypeScript.DefinitelyTyped" version="2.1.7" targetFramework="net45" />
 </packages>
